--- a/client/views/membership.html
+++ b/client/views/membership.html
@@ -16,9 +16,8 @@
     </div>
 
 
-    <script src="../../tmp/index.js"></script>
+    <script src="../../tmp/member.js"></script>
     <script type="text/javascript">
-    	console.log('aaa1');
     </script>
 </body>
 
