--- a/client/component/QandA/QandA.scss
+++ b/client/component/QandA/QandA.scss
@@ -1,3 +1,4 @@
+@import "../layout/base.scss";
 // 问题处样式
 $text-highlight: #f2e0d0;
 $qa-background: #fdf8f2;
@@ -336,3 +337,6 @@ $qa-img-background: #33302e;
   
 }
 
+.index-title{
+  background-color: yellow;
+}
