--- a/client/component/layout/base.scss
+++ b/client/component/layout/base.scss
@@ -15,9 +15,9 @@ body {
 	font-size:14px;
 	margin:0 auto;
 	display:block;
-	background: $default none repeat scroll 0 0;
-  width:100%;
-  height:100%
+	background: #fff1e5  none repeat scroll 0 0;
+    width:100%;
+    height:100%
 }
 div {
 	text-align: left;
