--- a/client/component/layout/member.scss
+++ b/client/component/layout/member.scss
@@ -357,6 +357,13 @@ $text-background: #26747a;
 #payment-page {
     position: relative;
     overflow: visible;
+    // display: none;
+}
+.show{
+  display: block;
+}
+.hide{
+  display: none;
 }
 
 .o-overlay-shadow {
@@ -409,9 +416,12 @@ $text-background: #26747a;
     label,button{
         height: 30px;
     }
+    button{
+          padding: 0px 4px;
+    }
     // margin: 15px 0;
       label{
-        display: inline-block;
+        // display: inline-block;
         height: 30px;
         line-height: 30px;
         color:#9e2f50;
