--- a/client/component/carousel/carousel.scss
+++ b/client/component/carousel/carousel.scss
@@ -7,6 +7,8 @@
    border:4px solid gray;
    box-shadow: 3px 3px 5px gray;
    border-radius:10px;
+   margin: 20px auto;
+
   }
   .list{
     width:4200px;
